# external-monitor

./: .env.example  .gitignore  AGENTS.md  README.md  REPOSITORY_CONTENTS.md  compose.intelligence.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.server.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  INTELLIGENCE_ARCHITECTURE_QUALITY.md  INTELLIGENCE_RUNTIME.md  MAAS_MODELS.md  PRODUCT.md  SOURCE_BOUNDARIES.md  backstory-mcp-evaluation.md  backstory-mcp-tools.md
fixtures/: README.md  account-assignments.json  accounts.json  external-events.json  hierarchy-nodes.json  red-hat-capabilities.json  relevance-evaluations.json
intelligence/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
intelligence/migrations/: env.py
intelligence/migrations/versions/: 0001_intelligence_foundation.py  0002_memory_embedding_dimension.py  0003_versioned_feedback.py
intelligence/src/connected_monitor_intelligence/: __init__.py  activities.py  api.py  artifacts.py  brave.py  config.py  contracts.py  database.py  embeddings.py  maas.py  models.py  pipeline.py  retrieval.py  safety.py  store.py  tavily_api.py  tavily_mcp.py  text_quality.py  worker.py  workflows.py
intelligence/tests/: test_contracts.py  test_maas.py  test_provider_selection.py  test_safety.py  test_text_quality.py
server/: capabilityTaxonomy.ts  config.ts  evaluator.ts  httpServer.ts  index.ts  liveSearch.ts  maasReasoning.ts  monitorRunner.ts  publicRetrieval.ts  repositories.ts  (+3 more)
(+45 files in other folders)
