[project]
name = "connected-monitor-intelligence"
version = "0.1.0"
description = "Authoritative autonomous intelligence runtime for Connected Monitor"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.15.2",
  "boto3==1.37.17",
  "fastembed==0.5.1",
  "fastapi==0.115.11",
  "httpx==0.28.1",
  "pgvector==0.3.6",
  "playwright==1.51.0",
  "psycopg[binary]==3.2.5",
  "pydantic-settings==2.8.1",
  "pypdf==5.3.1",
  "sqlalchemy==2.0.39",
  "temporalio==1.10.0",
  "trafilatura==2.0.0",
  "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
  "pytest==8.3.5",
  "pytest-asyncio==0.25.3",
  "ruff==0.9.10",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connected_monitor_intelligence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
